# rag-chatbot-bedrock

./: README.md  main.py  pyproject.toml
Admin/: Dockerfile  admin.py  requirements.txt
User/: Dockerfile  app.py  requirements.txt
